<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/preferences"
        android:layout_width="388dp"
        android:layout_height="151dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/socialbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/social"
            app:layout_constraintBottom_toTopOf="@+id/back"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/culturalbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/cultural"
            app:layout_constraintBottom_toTopOf="@+id/socialbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password5" />

        <RadioButton
            android:id="@+id/nightlifebutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/nightlife"
            app:layout_constraintBottom_toTopOf="@+id/signUp"
            app:layout_constraintStart_toEndOf="@+id/socialbutton" />

        <RadioButton
            android:id="@+id/sportsbutton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:text="@string/sport"
            app:layout_constraintBottom_toTopOf="@+id/back"
            app:layout_constraintStart_toEndOf="@+id/culturalbutton" />

        <RadioButton
            android:id="@+id/restaurantbutton"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/restaurant"
            app:layout_constraintBottom_toTopOf="@+id/nightlifebutton"
            app:layout_constraintStart_toEndOf="@+id/sportsbutton" />

    </RadioGroup>

    <TextView
        android:layout_width="262dp"
        android:layout_height="32dp"
        android:text="@string/preferences"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:text="@string/language"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511" />

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <EditText
        android:id="@+id/signUpNumber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:text="@string/mail"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:text="@string/nameu"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:text="@string/password"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <EditText
        android:id="@+id/signUpLanguage"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:text="@string/telefono"
        android:textAlignment="gravity"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/back"
        android:layout_width="168dp"
        android:layout_height="68dp"
        android:backgroundTint="#F8928B"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="168dp"
        android:layout_height="68dp"
        android:backgroundTint="#F8928B"
        android:text="@string/enter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <ImageView
        android:layout_width="117dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#F8928B"
        android:textSize="45sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


</androidx.constraintlayout.widget.ConstraintLayout>